--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,10 +1,10 @@
-/*.hero {
+.hero {
   background-color: #2f303a;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/hero/bg.jpg");
+    url("../images/hero/bghero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   & .title-hero {
@@ -29,4 +29,3 @@
   text-transform: uppercase;
   color: #ffffff;
 }
-*/
