--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,17 +1,22 @@
-/*.container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}*/
 .container {
   width: 100%;
   padding: 0 31px;
 }
-@media screen and (min-width) : {
+@media screen and (min-width: 480px) {
   .container {
     max-width: 480 px;
     margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 480 px;
+    padding: 0 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    padding: 0 15px;
   }
 }
