--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,4 +1,42 @@
-.benefits > .container {
+.benefits {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.benefits-list-title {
+  font-family: var(--main-font);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.142;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+  margin-bottom: 10px;
+}
+.benefits-list-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-bottom: 30px;
+}
+.list-icon {
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.icon-img {
+  width: 70px;
+  height: 70px;
+}
+/*.benefits > .container {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -42,7 +80,5 @@
   background-color: #f5f4fa;
   margin-bottom: 30px;
 }
-.icon-img {
-  width: 70px;
-  height: 70px;
-}
+
+}*/
