--- a/sass/layout/_our-work.scss
+++ b/sass/layout/_our-work.scss
@@ -1,3 +1,39 @@
+@media screen and (min-width: 1200px) {
+  .our-work {
+    display: flex;
+    padding-bottom: 94px;
+  }
+}
+.our-work-list {
+  display: flex;
+}
+.our-work-item {
+  display: flex;
+  position: relative;
+}
+.our-work-item :not(:last-child) {
+  margin-right: 30px;
+}
+.our-work-list-card {
+  width: 370px;
+  height: 70px;
+  bottom: 0;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+}
+.our-work-list-text {
+  font-family: var(--main-font);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
+/*
 .our-work > .container {
   padding-bottom: 94px;
 }
@@ -24,4 +60,4 @@
     padding-top: 27px;
     padding-bottom: 27px;
   }
-}
+}*/
