--- a/css/main.css
+++ b/css/main.css
@@ -464,6 +464,10 @@ img {
 }
 
 }*/
+.our-work {
+  display: none;
+}
+
 @media screen and (min-width: 1200px) {
   .our-work {
     display: flex;
@@ -485,21 +489,27 @@ img {
 }
 
 .our-work-list-card {
-  width: 370px;
-  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+  width: 100%;
   bottom: 0;
-  background-color: rgba(47, 48, 58, 0.8);
+  left: 0;
   position: absolute;
 }
 
 .our-work-list-text {
+  position: absolute;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
   font-family: var(--main-font);
+  font-style: normal;
   font-weight: bold;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 16px;
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
   color: #ffffff;
   padding-top: 27px;
   padding-bottom: 27px;
@@ -514,41 +524,102 @@ img {
   position: relative;
   display: flex;
   justify-content: space-between;
-  &-text {
-    position: absolute;
-    bottom: 0;
-    width: 370px;
-    height: 70px;
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    background-color: rgba(47, 48, 58, 0.8);
-    color: #ffffff;
-    padding-top: 27px;
-    padding-bottom: 27px;
-  }
-}*/
-.workers > .container {
-  padding-top: 94px;
-}
 
+}*/
 .workers {
   background-color: #f5f4fa;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.workers-list {
-  display: flex;
-  justify-content: space-between;
+.workers-name {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+}
+
+.workers-position {
+  font-family: var(--main-font);
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-bottom: 16px;
+}
+
+.workers-content {
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding-top: 30px;
+  padding-bottom: 24px;
+  background-color: #ffffff;
+}
+
+.workers-list-item {
+  width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .workers-list-item {
+    width: 354px;
+  }
+  .workers-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 1199px) {
+  .workers-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .workers-list-item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .workers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .workers-list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .workers-list-item {
+    width: 270px;
+    margin-bottom: 0;
+  }
+  .social-list-item:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
+/*.workers > .container {
+  padding-top: 94px;
+}
+.workers {
+  background-color: #f5f4fa;
+  &-list {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .workers-list-item {
   margin-bottom: 94px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -565,7 +636,6 @@ img {
   padding-left: 30px;
   padding-right: 30px;
 }
-
 .workers-name {
   font-family: var(--main-font);
   font-weight: 500;
@@ -576,7 +646,6 @@ img {
   color: var(--accent-color);
   margin-bottom: 10px;
 }
-
 .workers-position {
   font-family: var(--main-font);
   font-weight: normal;
@@ -587,10 +656,10 @@ img {
   color: #757575;
   margin-bottom: 16px;
 }
-
+*/
 .social-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .social-list-link {
@@ -620,6 +689,10 @@ img {
 
 .social-list-icon:hover, .social-list-icon:focus {
   fill: #ffffff;
+}
+
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .customers > .container {
