--- a/sass/layout/_social-links.scss
+++ b/sass/layout/_social-links.scss
@@ -1,6 +1,6 @@
 .social-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .social-list-link {
@@ -30,4 +30,7 @@
   &:focus {
     fill: #ffffff;
   }
+}
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
 }
