--- a/sass/layout/_costomers.scss
+++ b/sass/layout/_costomers.scss
@@ -1,30 +1,35 @@
-.customers > .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
+.block {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  
 
-.costumers-list {
-  display: flex;
-  justify-content: space-between;
-  &-icon {
-    fill: currentColor;
+@media screen and (min-width: 1200px){
+.block {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
   }
 }
-.costumers-list-link {
+.costumers-list {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 170px;
-  height: 90px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
-  color: #afb1b8;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: #2196f3;
-    border-color: #2196f3;
+  margin: -15px;
+  flex-wrap: wrap;
+}
+.costumers-list-item {
+  width: calc((100% - 2 * 30px) / 2);
+  margin: 15px;
+}
+@media screen and (min-width: 768px) {
+  .costumers-list-item {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .costumers-list-item {
+    width: calc((100% - 6 * 30px) / 6);
   }
 }
