--- a/css/main.css
+++ b/css/main.css
@@ -572,13 +572,6 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .workers-list-item {
-    width: calc((100% - 2 * 30px) / 2);
-    margin: 15px;
-  }
-}
-
-@media screen and (min-width: 768px) {
   .workers-list {
     display: flex;
     flex-wrap: wrap;
@@ -586,10 +579,24 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .workers-list-item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .workers-list-item {
     width: calc((100% - 4 * 30px) / 4);
     padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .workers {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -683,36 +690,53 @@ img {
   margin-right: 10px;
 }
 
-.customers > .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
+.customers {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .costumers-list {
   display: flex;
-  justify-content: space-between;
+  margin: -15px;
+  flex-wrap: wrap;
+}
+
+.costumers-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  color: #afb1b8;
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.costumers-list-link:hover, .costumers-list-link:focus {
+  border: 1px solid #2196f3;
+  color: #2196f3;
 }
 
 .costumers-list-icon {
   fill: currentColor;
 }
 
-.costumers-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 170px;
-  height: 90px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
-  color: #afb1b8;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.costumers-list-item {
+  width: calc((100% - 2 * 30px) / 2);
+  margin: 15px;
 }
 
-.costumers-list-link:hover, .costumers-list-link:focus {
-  color: #2196f3;
-  border-color: #2196f3;
+@media screen and (min-width: 768px) {
+  .costumers-list-item {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .costumers-list-item {
+    width: calc((100% - 6 * 30px) / 6);
+    margin-right: 30px;
+  }
 }
 
 .footer {
