--- a/sass/layout/_costomers.scss
+++ b/sass/layout/_costomers.scss
@@ -1,28 +1,39 @@
-.block {
+.customers {
   padding-top: 60px;
   padding-bottom: 60px;
-  
+}
 
-@media screen and (min-width: 1200px){
-.block {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-}
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
 .costumers-list {
   display: flex;
   margin: -15px;
   flex-wrap: wrap;
 }
+
+.costumers-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  color: #afb1b8;
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border: 1px solid #2196f3;
+    color: #2196f3;
+  }
+}
+.costumers-list-icon {
+  fill: currentColor;
+}
+
 .costumers-list-item {
   width: calc((100% - 2 * 30px) / 2);
   margin: 15px;
 }
+
 @media screen and (min-width: 768px) {
   .costumers-list-item {
     width: calc((100% - 3 * 30px) / 3);
