--- a/css/main.css
+++ b/css/main.css
@@ -797,6 +797,7 @@ img {
 
 .footer-form {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .footer-form-input {
@@ -876,8 +877,16 @@ img {
 }
 
 @media screen and (max-width: 1199px) {
-  .footer-address-container {
-    margin-bottom: 60px;
+  .footer {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
   }
 }
 
@@ -887,44 +896,53 @@ img {
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .button-subscribe {
-    margin-top: 20px;
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  .footer-container-slogan {
+    display: inline-block;
   }
 }
 
 @media screen and (max-width: 1199px) {
-  .footer {
-    text-align: center;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer-address-container {
-    margin-right: 172px;
-    margin-left: 78px;
+  .footer-container-slogan {
     margin-bottom: 60px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
+  .footer-container-slogan {
+    margin-left: 70px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-social-list {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .footer-group {
-    margin: auto;
+    margin-left: 93px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .footer > .container {
+  .footer-form {
     display: flex;
-    align-items: baseline;
+    margin-top: 20px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-address-container {
-    margin-right: 84px;
-    margin-left: 0;
-    margin-bottom: 0;
+  .footer-form-input {
+    display: flex;
+    width: 358px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button-subscribe {
+    margin-left: 12px;
   }
 }
 
@@ -1032,7 +1050,6 @@ img {
 .footer-group {
   margin-left: 94px;
 }
-
 */
 .backdrop {
   position: fixed;
@@ -1259,6 +1276,7 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+/*
 .button-list {
   display: flex;
   align-items: center;
@@ -1267,54 +1285,48 @@ img {
   margin-bottom: 50px;
   margin-right: auto;
   margin-left: auto;
+}*/
+.block {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.section-portfolio > .container {
-  padding-top: 94px;
-}
-
-.portfolio-photo-link {
-  display: block;
-}
-
-.portfolio-photo-link:hover, .portfolio-photo-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  outline: none;
+.button-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
 .work-examples-list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 94px;
 }
 
 .work-examples-item {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  max-width: 450px;
+  background: #ffffff;
 }
 
-.work-examples-item:nth-child(3n) {
-  margin-right: 0;
+.portfolio-photo-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.work-examples-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.work-examples-images {
-  width: 370px;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+.work-examples-content {
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  padding: 20px 21px;
 }
 
 .work-examples-title {
   font-family: var(--main-font);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: #212121;
   margin-bottom: 4px;
-  color: var(--accent-color);
 }
 
 .work-examples-text {
@@ -1326,6 +1338,106 @@ img {
   color: #757575;
 }
 
+@media screen and (min-width: 1200px) {
+  .block {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .button-list {
+    justify-content: start;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  .button-list {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .button-list .modal-button:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
+.button-lis:not(:last-child) {
+  margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .work-examples-list {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .work-examples-list {
+    margin: -15px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .work-examples-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .work-examples-item {
+    max-width: 354px;
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-examples-item {
+    max-width: 370px;
+  }
+}
+
+/*.section-portfolio > .container {
+  padding-top: 94px;
+}
+
+.portfolio-photo-link {
+  display: block;
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    outline: none;
+  }
+}
+
+.work-examples-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 94px;
+}
+
+.work-examples-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+.work-examples-images {
+  width: 370px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+
+
 .work-examples-content {
   padding: 28px 24px;
   border-bottom-right-radius: 4px;
@@ -1336,7 +1448,7 @@ img {
   border-bottom: 1px solid #eeeeee;
   box-sizing: border-box;
 }
-
+*/
 .overlay {
   position: absolute;
   width: 100%;
