--- a/sass/layout/_portfolio-btn.scss
+++ b/sass/layout/_portfolio-btn.scss
@@ -22,7 +22,7 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-
+/*
 .button-list {
   display: flex;
   align-items: center;
@@ -31,4 +31,4 @@
   margin-bottom: 50px;
   margin-right: auto;
   margin-left: auto;
-}
+}*/
