--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,4 +1,101 @@
-.section-portfolio > .container {
+.block {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.button-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.work-examples-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.work-examples-item {
+  max-width: 450px;
+  background: #ffffff;
+}
+.portfolio-photo-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.work-examples-content {
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  padding: 20px 21px;
+}
+.work-examples-title {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+  margin-bottom: 4px;
+}
+.work-examples-text {
+  font-family: var(--main-font);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .block {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .button-list {
+    justify-content: start;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  .button-list {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .button-list .modal-button:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+.button-lis:not(:last-child) {
+  margin-right: 8px;
+}
+@media screen and (max-width: 767px) {
+  .work-examples-list {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work-examples-list {
+    margin: -15px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .work-examples-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work-examples-item {
+    max-width: 354px;
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work-examples-item {
+    max-width: 370px;
+  }
+}
+/*.section-portfolio > .container {
   padding-top: 94px;
 }
 
@@ -34,23 +131,7 @@
   border-top-left-radius: 5px;
 }
 
-.work-examples-title {
-  font-family: var(--main-font);
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-  color: var(--accent-color);
-}
-.work-examples-text {
-  font-family: var(--main-font);
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
+
 
 .work-examples-content {
   padding: 28px 24px;
@@ -62,3 +143,4 @@
   border-bottom: 1px solid #eeeeee;
   box-sizing: border-box;
 }
+*/
