--- a/sass/layout/_portfolio-btn.scss
+++ b/sass/layout/_portfolio-btn.scss
@@ -1,27 +1,3 @@
-/*.modal-button-portfolio {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  display: block;
-  cursor: pointer;
-  padding: 6px 22px;
-  border: none;
-  border-radius: 4px;
-  overflow: hidden;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: #2196f3;
-    color: #ffffff;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
-}*/
 /*
 .button-list {
   display: flex;
@@ -33,22 +9,56 @@
   margin-left: auto;
 }*/
 .modal-button-portfolio {
-  min-width: 73px;
-  padding: 6px 22px;
-  border-radius: 4px;
+  font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.625;
-  align-items: center;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
-  background-color: #f5f4fa;
+  text-decoration: none;
+  display: block;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
+  border: none;
+  border-radius: 4px;
+  overflow: hidden;
   cursor: pointer;
-  border: transparent;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+    color: #ffffff;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+.button-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 .modal-button:not(:last-child) {
-    margin-right: 8px;
+  margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) and (min-width: 300px) {
+  .modal-button:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .buttons-list {
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .buttons-list {
+    margin-bottom: 50px;
+  }
+}
