--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,12 +1,8 @@
-.block {
+.section-portfolio {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.button-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
+
 .work-examples-list {
   display: flex;
   flex-wrap: wrap;
@@ -20,14 +16,13 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .work-examples-content {
-  border-right: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  padding: 20px 21px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  padding: 20px 24px;
 }
 .work-examples-title {
   font-family: var(--main-font);
-  font-weight: 700;
+  font-weight: bold;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -43,27 +38,15 @@
 
   color: #757575;
 }
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  .work-examples-title {
+    letter-spacing: 0.04em;
+  }
+}
 @media screen and (min-width: 1200px) {
-  .block {
+  .section-portfolio {
     padding-top: 94px;
     padding-bottom: 94px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .button-list {
-    justify-content: start;
-    margin-bottom: 40px;
-    flex-wrap: wrap;
-  }
-}
-@media screen and (max-width: 1199px) and (min-width: 768px) {
-  .button-list {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .button-list .modal-button:nth-child(-n + 3) {
-    margin-bottom: 15px;
   }
 }
 
